Updating the slatemod css file to fix the spacing and formatting of a div class.

--- a/gkapfham/css/bootstrap-slatemod.css
+++ b/gkapfham/css/bootstrap-slatemod.css
@@ -315,9 +315,10 @@ a:focus {
 }
 .major {
     text-decoration: none;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 18px;
     line-height: 1.5;
+    margin-bottom: -20px;
 }
 a.major {
     text-decoration: none;
